Tue Jun  6 14:30:43 CEST 2017
        Abstracting the response gotten from the exchange's tracking
        API and relying it to the frontend.
        A payment generator has been implemented so that the db can
        easily be populated for testing purposes.
        /history API now has the way to query from a starting base date
        ahead into the future.
        Memory leaks fixes.

Mon Mar  6 17:57:51 CET 2017
	Add support for wire fee calculations to /pay handling (#4935),
	and adding setting "max_wire_fee" and "wire_fee_amortization"
	in contract from defaults. -CG

Mon Mar  6 00:59:25 CET 2017
	Implement BIND_TO option to allow binding backend to a particular
	IP address (#4752).  Enabling use of dual-stack by default. -CG

Thu Dec 15 10:37:08 CET 2016
        Implementing:
        - /map/in, /map/out API, to allow frontends to store
        plain text contracts in database and retrieving them
        by looking for their hashcodes.


Fri Nov 18 18:54:07 CET 2016
	Misc. minor updates to match API changes from exchange 0.2.
	Releasing taler-merchant 0.2.0. -CG

Mon Oct 10 16:27:57 CEST 2016
        Implementing:
        - /track API, to map transactions to wire transfers and
        viceversa.
        - /history API, to get the list of transactions in DB.
        - merchant "instances", to run make multiple shops on the
        same backend.
        -MS

Tue Jun  7 15:17:45 CEST 2016
	Store signing key used by exchange in DB.  Might be useful
	in the future when we implement GC for the backenddb. -CG

Wed Jun  1 17:27:36 CEST 2016
	Releasing taler-merchant-0.0.0. -CG