@@ -5,7 +5,8 @@ Tue Jun  6 14:30:43 CEST 2017
         easily be populated for testing purposes.
         /history API now has the way to query from a starting base date
         ahead into the future.
-        Memory leaks fixes.
+        Memory leak fixes. -CG/MS
+	Releasing taler-merchant 0.3.0. -CG
 
 Mon Mar  6 17:57:51 CET 2017
 	Add support for wire fee calculations to /pay handling (#4935),
